Fix some warnings and some refactorings